# Tara-AI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: sanity.yml
docs/: agent-endpoint.md  authentication.md  chat-endpoint.md  errors.md  faq.md  getting-started.md  migrating-from-anthropic.md  rate-limits.md  tool-use.md
examples/: README.md
examples/curl/: agent-tools.sh  agent.sh  chat.sh
examples/javascript/: agent_basic.mjs  agent_loop.mjs  agent_tools.mjs  chat_basic.mjs  package.json
examples/php/: agent_basic.php  agent_loop.php  chat_basic.php
examples/python/: agent_basic.py  agent_loop.py  agent_tools.py  chat_basic.py  chat_conversation.py
examples/typescript/: agent.ts  package.json  tsconfig.json
openapi/: tara-api.yaml
sdk/: README.md
sdk/javascript/: README.md  package.json
sdk/javascript/src/: client.js  errors.js  index.js
sdk/php/: README.md  composer.json
sdk/php/src/: AgentResponse.php  TaraClient.php  TaraError.php
sdk/python/: README.md  pyproject.toml
sdk/python/tara/: __init__.py  client.py  errors.py
