[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tara-client"
version = "1.1.0"
description = "Python client for the Tara API (tara.tratok.com)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Tratok" }]
keywords = ["tara", "tratok", "ai", "llm", "anthropic", "messages"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.31"]

[project.urls]
Homepage = "https://tara.tratok.com"
Documentation = "https://tara.tratok.com/api_docs.php"
Repository = "https://github.com/tratok/tara-api"
Changelog = "https://github.com/tratok/tara-api/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["tara*"]
